[package]
authors = ["Rebecca Turner <rbt@sent.as>"]
categories = ["development-tools"]
description = "A Python documentation generator and toolchain"
edition = "2018"
keywords = ["rst", "python", "documentation"]
license-file = "LICENSE.md"
name = "coolgirldoc"
readme = "README.md"
repository = "https://github.com/9999years/coolgirldoc"
version = "1.0.0"

[dependencies]
color-eyre = "0"
structopt = "0"
tracing-error = "0"
tracing-subscriber = "0"
walkdir = "2"

[dependencies.tracing]
features = ["attributes"]
version = "0"

[dev-dependencies]
indoc = "1"
pretty_assertions = "0"
